--- a/.github/workflows/deploy_surge.yaml
+++ b/.github/workflows/deploy_surge.yaml
@@ -28,4 +28,4 @@ jobs:
     - name: Install Surge
       run: npm install -g surge
     - name: Run Surge  
-      run: surge ./ botcamp2020testnew.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./ botcampnewapp.surge.sh --token ${{secrets.SURGE_TOKEN}}
